Fix potential overflow of insanios svg

--- a/public/style.css
+++ b/public/style.css
@@ -143,7 +143,7 @@ section {
 }
 
 #insanios {
-    margin: 3em 1.5em;
+    margin: 3rem 1.5rem;
 }
 
 #insanios ~ p {
